@@ -312,3 +312,18 @@ flag_rgb=244,154,193,63,0,22,85,0,42,105,0,57,123,0,69,140,0,81,158,0,93,177,0,1
                 append=yes
          [/music]
 #enddef
+
+#define COLOR_HEAL
+green=255
+#enddef
+
+#define COLOR_HARM
+red=255
+#enddef
+
+#define COLOR_WHITE
+red=255
+green=255
+blue=255
+#enddef
+
