@@ -50,6 +50,8 @@ SVN trunk (1.1.2+svn):
    * added unit cost to help
  * WML improvements
    * interpret the variables/arrays in a few more tags
+   * floating damage/heal or status can be printed over a modified unit
+   using the 'text', 'red', 'blue', and 'green' keys in [unstore_unit]
  * multiplayer settings:
    * two additional MP timer settings, time reservoir limit and action bonus:
      * Reservoir prevents the turn timer from exceeding an upper limit.
